--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'org.apache.commons:commons-csv:1.1'
 
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'org.apache.httpcomponents:httpclient:4.4.1'
+
 }
